# BioInformatics1241EB

./: .gitignore  Cargo.toml  README.md  build.rs
labs/lab01/: Cargo.toml  Makefile  build.rs
labs/lab02/: Cargo.toml  Makefile
labs/lab02/src/: ex3_core.rs
labs/lab03/: Cargo.toml  Makefile
labs_python/lab04/: ex01_translate.py  ex02_codon_freq.py
labs_python/lab04/data/: combined.fa
labs_python/lab05/scripts/: ex01_reassemble.py
src/: main.rs
ui/: app.slint
