[package]
name = "lab03"
version = "0.1.0"
edition = "2021"
publish = false

[features]
# keep GUI wiring for ex3, but GUI is not needed for ex1/ex2
gui = ["dep:slint", "dep:rfd"]

[dependencies]
anyhow = "1"
flate2 = "1"
plotters = "0.3"

# --- optional GUI deps for a later exercise ---
[dependencies.slint]
version = "1.13.1"
optional = true
default-features = false
features = ["std", "compat-1-2", "backend-winit", "renderer-femtovg"]

[dependencies.rfd]
version = "0.14"
optional = true

# ---- bins ----
[[bin]]
name = "ex01_tm"
path = "src/bin/ex01_tm.rs"

[[bin]]
name = "ex02_tm_window"
path = "src/bin/ex02_tm_window.rs"
